--- a/styles.css
+++ b/styles.css
@@ -88,10 +88,10 @@ body {
 
 .message {
   grid-area: main;
-  display: grid;
-  grid-column-gap: 8px;
-  align-content: center;
-  text-align: center;
+  align-self: center;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
   font-family: 'Impact', 'Oswald';
   font-size: 5em;
   font-weight: bold;
@@ -100,6 +100,19 @@ body {
   user-select: none;
   pointer-events: none;
   z-index: 10000;
+}
+
+.word {
+  padding-right: 0.4em;
+}
+
+.message.instructions {
+  margin: 0 auto;
+  font-size: 3em;
+  font-family: 'Comfortaa';
+  font-weight: normal;
+  text-shadow: -1px 1px 4px rgba(0, 0, 0, 0.6);
+  max-width: 60%;
 }
 
 .fadeInOut {
@@ -152,13 +165,21 @@ body {
     padding-top: 0;
     padding-bottom: 3px;
   }
-  #message {
+  .message {
     font-size: 2.5em;
+  }
+  .message.instructions {
+    font-size: 2em;
+    max-width: 90%;
   }
 }
 
 @media screen and (max-height: 400px) {
   #main {
     grid-template-rows: 15vh 80vh 5vh;
+  }
+  .message.instructions {
+    font-size: 2em;
+    max-width: 100%;
   }
 }
